Usage of try-with-resources pom file cleanup